ryddet login side for JS, så nu tages man bare til brugeradmin siden. Derudover centreret bruger tabellen.

--- a/cdio/UI Layer (HTML & CSS)/index.css
+++ b/cdio/UI Layer (HTML & CSS)/index.css
@@ -70,6 +70,8 @@ table, th, td {
 table {
     /*border-collapse: collapse;*/
     width: auto;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 /* table row. every even row has a color. */
